--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,9 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:@typescript-eslint/eslint-recommended"
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:prettier/recommended",
+    "prettier/react"
   ],
   "globals": {
     "Atomics": "readonly",
