--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix", "yarn test --bail"
+      "yarn lint --fix"
     ]
   },
   "dependencies": {
